--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,9 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
+        
+    - name: GolangCI-Lint Action
+      uses: actions-contrib/golangci-lint@v0.1.0
 
     - name: Build
       run: go build -v .
