--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,8 @@ jobs:
         
     - name: GolangCI-Lint Action
       uses: actions-contrib/golangci-lint@v0.1.0
+      with:
+        args: "run"
 
     - name: Build
       run: go build -v .
