--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,10 @@ jobs:
             dep ensure
         fi
         
-    - name: GolangCI-Lint Action
-      uses: actions-contrib/golangci-lint@v0.1.0
-      with:
-        args: "run"
+    - name: GolangCI-Lint
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.21.0
+        golangci-lint run
 
     - name: Build
       run: go build -v .
